# delta_testing

./: README.md  pyproject.toml
.github/workflows/: python.yml
src/delta_testing/: __init__.py  loading.py  saving.py  states.py
