[project]
name = "delta-testing"
version = "0.1.0"
description = "Testing out deltalake/polars integration"
authors = [
    { name = "Nathan McIntosh", email = "natemcintosh@gmail.com" }
]
dependencies = [
    "polars>=0.19.2",
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.2",
    "ipython>=8.12.2",
    "black>=23.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true
